# rust_lenient_bool

./: Cargo.toml  README.md
src/: lib.rs
